objects/QoS_Policy__c/fields/Best_Effort__c.field-meta.xml
<CustomField>
    <fullName>Best_Effort__c</fullName>
    <label>Best Effort</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>