objects/QoS_Policy__c/fields/Voice__c.field-meta.xml
<CustomField>
    <fullName>Voice__c</fullName>
    <label>Voice</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>